<resources>
    <string name="app_name">CalcFusion</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <string name="del">Del</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>

    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="inverse">INV</string>
    <string name="radians">RAD</string>
    <string name="percentage">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="tangent">tan</string>
    <string name="pi">PI</string>
    <string name="euler">e</string>
    <string name="exponent">^</string>
    <string name="square_root">sqrt</string>

    <string name="invalid_expression">Invalid expression</string>
</resources>