<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_calculator_buttons">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/second_line_layout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_7"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_7"
                app:layout_constraintEnd_toStartOf="@+id/num_8"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_8"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_8"
                app:layout_constraintEnd_toStartOf="@id/num_9"
                app:layout_constraintStart_toEndOf="@id/num_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_9"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/num_8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/third_line_layout"
            app:layout_constraintTop_toBottomOf="@id/first_line_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_4"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_4"
                app:layout_constraintEnd_toStartOf="@+id/num_5"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_5"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_5"
                app:layout_constraintEnd_toStartOf="@id/num_6"
                app:layout_constraintStart_toEndOf="@id/num_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_6"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/num_5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/third_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/fourth_line_layout"
            app:layout_constraintTop_toBottomOf="@id/second_line_layout">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_1"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_1"
                app:layout_constraintEnd_toStartOf="@+id/num_2"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_2"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_2"
                app:layout_constraintEnd_toStartOf="@id/num_3"
                app:layout_constraintStart_toEndOf="@id/num_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_3"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/num_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fourth_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_line_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/dot"
                app:layout_constraintEnd_toStartOf="@+id/num_0"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num_0"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/num_0"
                app:layout_constraintEnd_toStartOf="@id/equals"
                app:layout_constraintStart_toEndOf="@id/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/equals"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/num_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>