<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_calculator_buttons">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/second_line_layout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_bracket"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/open_bracket"
                app:layout_constraintEnd_toStartOf="@+id/close_bracket"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_bracket"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/close_bracket"
                app:layout_constraintEnd_toStartOf="@id/percentage"
                app:layout_constraintStart_toEndOf="@id/open_bracket" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percentage"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/percentage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/close_bracket" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/third_line_layout"
            app:layout_constraintTop_toBottomOf="@id/first_line_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sin"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/sin"
                app:layout_constraintEnd_toStartOf="@+id/cos"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cos"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cos"
                app:layout_constraintEnd_toStartOf="@id/tangent"
                app:layout_constraintStart_toEndOf="@id/sin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tangent"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tangent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cos" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/third_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/fourth_line_layout"
            app:layout_constraintTop_toBottomOf="@id/second_line_layout">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/pi"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pi"
                app:layout_constraintEnd_toStartOf="@+id/euler"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/euler"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/euler"
                app:layout_constraintEnd_toStartOf="@id/expoent"
                app:layout_constraintStart_toEndOf="@id/pi" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/expoent"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/exponent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/euler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fourth_line_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third_line_layout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/inverse"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/inverse"
                app:layout_constraintEnd_toStartOf="@+id/radians"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/radians"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/radians"
                app:layout_constraintEnd_toStartOf="@id/square_root"
                app:layout_constraintStart_toEndOf="@id/inverse" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/square_root"
                style="@style/CalcVision.Button.Calculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/square_root"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/radians" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>